--- a/app/src/main/res/layout/activity_arcamera.xml
+++ b/app/src/main/res/layout/activity_arcamera.xml
@@ -6,10 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:id="@+id/relativeLayout"
     android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="eu.kudan.kudansamples.ARCameraActivity">
 
     <LinearLayout
+
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
