--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -27,7 +27,7 @@
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="100dp"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         android:onClick="selection"
@@ -54,12 +54,34 @@
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="100dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:onClick="social"
         android:src="@drawable/si"
         android:layout_marginTop="44dp"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/imageView4"
         android:layout_alignStart="@+id/imageView4" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/body"
+        android:id="@+id/imageView3"
+        android:onClick="flower"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/imageView5"
+        android:layout_alignStart="@+id/imageView5"
+        android:layout_marginBottom="57dp" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/body"
+        android:id="@+id/imageView7"
+        android:onClick="bot"
+        android:layout_alignBottom="@+id/imageView3"
+        android:layout_alignLeft="@+id/imageView4"
+        android:layout_alignStart="@+id/imageView4"
+        android:layout_marginBottom="10dp" />
 
 </RelativeLayout>
