--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,6 +17,6 @@ xmlns:tools="http://schemas.android.com/tools"
         android:layout_alignParentEnd="true"
 
         android:layout_alignParentRight="true"
-        android:src="@drawable/brain" />
+        android:src="@drawable/autism" />
 
 </RelativeLayout>
