--- a/app/src/main/res/layout/activity_arcamera.xml
+++ b/app/src/main/res/layout/activity_arcamera.xml
@@ -17,8 +17,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:layout_width="82dp"
+            android:layout_height="62dp"
+            android:text="Plant Flower"
+            android:onClick="plantFlower"
+            android:id="@+id/FlowerButton"
+            android:layout_gravity="bottom|center" />
 
 <!--        <Button
             android:layout_width="82dp"
@@ -51,4 +58,14 @@
             android:id="@+id/ModelButton"
             android:layout_gravity="bottom" />-->
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp" />
 </RelativeLayout>
