--- a/app/src/main/res/layout/activity_arcamera.xml
+++ b/app/src/main/res/layout/activity_arcamera.xml
@@ -20,7 +20,7 @@
         android:layout_centerHorizontal="true">
 
         <Button
-            android:layout_width="82dp"
+            android:layout_width="match_parent"
             android:layout_height="62dp"
             android:text="Plant Flower"
             android:onClick="plantFlower"
